# chess

./: .gitmodules  CMakeLists.txt  chess.data  chess.js  chess.wasm  index.html
.github/workflows/: ci.yml
src/: main.cpp
src/chess/: ai.cpp  ai.hpp  game.cpp  game.hpp
